[package]
edition = "2021"
name = "skyra-ai"
version = "1.2.0"
authors = ["Skyra Project <contact@skyra.pw>"]
description = "Lightning-fast AI for Skyra Project's games"

[lib]
crate-type = ["cdylib"]

# [[bench]]
# name = "bench"
# harness = false

[dependencies]
itertools = "0.12.1"
napi = { version = "2.16.2", default-features = false, features = ["napi8"] }
napi-derive = "2.16.2"

[build-dependencies]
napi-build = "2.1.3"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
lazy_static = "1.4.0"

[profile.release]
lto = true
strip = true
