[package]
edition = "2021"
name = "skyra-ai"
version = "2.0.1"
authors = ["Skyra Project <contact@skyra.pw>"]
description = "Lightning-fast AI for Skyra Project's games"

[lib]
crate-type = ["cdylib"]

# [[bench]]
# name = "bench"
# harness = false

[dependencies]
itertools = "0.14.0"
napi = { version = "2.16.4", default-features = false, features = ["napi8"] }
napi-derive = "2.16.3"

[build-dependencies]
napi-build = "2.1.3"

[dev-dependencies]
criterion = "0.8.0"
rand = "0.9.0"
lazy_static = "1.4.0"

[profile.release]
lto = true
strip = true
